--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Managing a budget with Slack",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && node dist/test/runner"
   },
   "author": "David East",
   "license": "MIT",
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.0.33",
     "@types/jasmine": "^2.5.36",
-    "jasmine": "^2.5.2"
+    "jasmine": "^2.5.2",
+    "jasmine-spec-reporter": "^2.7.0",
+    "node-mocks-http": "^1.5.4"
   }
 }
