--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
   "description": "Managing a budget with Slack",
   "main": "dist/index.js",
   "scripts": {
-    "test": "tsc && node dist/test/runner"
+    "test": "tsc && node dist/test/runner",
+    "start": "tsc && ./run.sh",
+    "e2e": "tsc && node dist/test/e2e-runner"
   },
   "author": "David East",
   "license": "MIT",
   "dependencies": {
-    "@types/body-parser": "0.0.33",
-    "@types/express-validator": "^2.20.33",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "express-validator": "^2.21.0",
-    "firebase": "^3.5.2",
-    "util": "^0.10.3"
+    "firebase": "^3.5.2"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.33",
     "@types/jasmine": "^2.5.36",
+    "@types/request-promise": "^4.1.33",
     "jasmine": "^2.5.2",
     "jasmine-spec-reporter": "^2.7.0",
-    "node-mocks-http": "^1.5.4"
+    "request": "^2.76.0",
+    "request-promise": "^4.1.1"
   }
 }
