feat(tests): e2e for token auth

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tsc && node dist/test/runner",
     "start": "tsc && ./run.sh",
-    "e2e": "tsc && node dist/test/e2e-runner"
+    "e2e": "tsc && ./e2e.sh"
   },
   "author": "David East",
   "license": "MIT",
