--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Managing a budget with Slack",
   "main": "dist/index.js",
   "scripts": {
-    "test": "tsc && node dist/test/runner",
+    "test": "tsc && ./test.sh",
     "start": "tsc && ./run.sh",
     "e2e": "tsc && ./e2e.sh"
   },
